Fix gh-1470 Firefox Overflow on Credits Page
Add specific style on credits page to allow for word wrap

--- a/src/views/credits/credits.scss
+++ b/src/views/credits/credits.scss
@@ -5,6 +5,7 @@
         line-height: 1.5rem;
 
         a {
+            white-space: normal;
             word-wrap: break-word; /* Overrides: https://github.com/LLK/scratch-www/blob/develop/src/main.scss#L43-L47 */
         }
     }
